--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,28 @@
 <!doctype html>
 <meta charset="utf-8">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <title>React</title>
-<body><div id="root"></div></body>
+<body>    
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <div class="col-lg-8">
+        <div class="well well-lg">
+          <div id="root"></div>
+        </div>
+      </div>
+      <div class="col-lg-4"></div>
+    </div>
+    <div class="col-lg-2"></div>
+  </div>
+</div>
+</body>
